--- a/config_sample.env
+++ b/config_sample.env
@@ -14,7 +14,7 @@ TELEGRAM_HASH = ""
 UPSTREAM_REPO = "https://github.com/breakdowns/slam-aria-mirror-bot"
 UPSTREAM_BRANCH = "master"
 # OPTIONAL CONFIG
-DATABASE_URL = "postgres://icxlnxqf:FYchG8E3-OZRw_2J_V8Wf2jkNaq7ryPN@suleiman.db.elephantsql.com/icxlnxqf"
+DATABASE_URL = ""
 AUTHORIZED_CHATS = ""   # Split by space
 SUDO_USERS = ""   # Split by space
 IGNORE_PENDING_REQUESTS = ""
